# AlgoLibR

./: .gitignore  Example.ipynb  README.md  pytest.ini  setup.sh
cpp/: CMakeLists.txt
cpp/AlgoLibR/ai/nlp/mining/word/: NewWordExtractor.cpp  NewWordExtractor.h  ngram_counter.cpp  ngram_counter.h
cpp/AlgoLibR/ai/nlp/seg/: ahocorasick_double_array_trie_segment.cpp  ahocorasick_double_array_trie_segment.h  ahocorasick_segment.cpp  ahocorasick_segment.h
cpp/AlgoLibR/array/: compare.cpp  compare.h
cpp/AlgoLibR/data_structure/: heap.cpp  heap.h  heap.hpp
cpp/AlgoLibR/data_structure/tree/: ac_trie.cpp  ac_trie.h  kv_trie_tree.cpp  kv_trie_tree.h  trie_tree.cpp  trie_tree.h
cpp/AlgoLibR/data_structure/trie/: ac_double_array_trie.hpp  ac_trie.cpp  ac_trie.h  double_array_trie.cpp  double_array_trie.h  double_array_trie.hpp  kv_trie_tree.cpp  kv_trie_tree.h  trie_tree.cpp  trie_tree.h
cpp/AlgoLibR/demo/: demo.cpp  demo.h  mul.cpp  mul.h
cpp/AlgoLibR/device/gpu/: enum_gpu.cu  enum_gpu.h  utils.h
cpp/AlgoLibR/framework/: comparator.hpp  init.h  logging.h  register_types.h  string.cpp  string.h
cpp/AlgoLibR/search/: binary_search.cpp  binary_search.h  jump_search.cpp  jump_search.h  search.cpp  search.h  utils.h
cpp/AlgoLibR/sort/: bubble_sort.cpp  bubble_sort.h  count_sort.cpp  count_sort.h  heap_sort.cpp  heap_sort.h  insertion_sort.cpp  insertion_sort.h  merge_sort.cpp  merge_sort.h  quick_sort.cpp  quick_sort.h  radix_sort.cpp  radix_sort.cu  radix_sort.h  radix_sort_cpu.h  selection_sort.cpp  selection_sort.h  sort.cpp  sort.h  tim_sort.cpp  tim_sort.h  utils.h
cpp/demo/: demo.cpp  demo.h
cpp/mul/: mul.cpp  mul.h
cpp/src/array/: compare.cpp  compare.h
cpp/src/common/: utils.h
cpp/src/data_structure/: heap.cpp  heap.h
cpp/src/demo/: demo.cpp
cpp/src/gpu/: enum_gpu.cu  enum_gpu.h
cpp/src/search/: binary_search.cpp  binary_search.h  search.cpp  search.h  search_kernel_imp.h  utils.h
cpp/src/sort/: bubble_sort.cpp  bubble_sort.h  count_sort.cpp  count_sort.h  heap_sort.cpp  heap_sort.h  insertion_sort.cpp  insertion_sort.h  merge_sort.cpp  merge_sort.h  quick_sort.cpp  quick_sort.h  radix_sort.cpp  radix_sort.cu  radix_sort.h  radix_sort_cpu.h  selection_sort.cpp  selection_sort.h  sort.cpp  sort.cu  sort.h  sort.hpp  sort_kernel_imp.h  tim_sort.cpp  tim_sort.h  utils.h
cpp/src/utils/: comparator.hpp  register_types.h
cpp/test/: CMakeLists.txt  README.md  ngrams_test_results.txt  ngrams_test_results_filtered.txt  test.cpp  test_ngrams  test_ngrams.cpp
cpp/test/sort/: test_sort.cu
cpp/test/src/: test_ac_dat.cpp  test_ac_dat_segment.cpp  test_char32_t.cpp  test_dat.cpp  test_data_structure.cpp  test_data_structure.h  test_logging.cpp  test_ngrams.cpp  test_regex.cpp  test_regex.h  test_segment.cpp  test_segment.h  test_sort.cpp  test_sort.h
python/: .gitattributes  MANIFEST.in  README.md  setup.cfg  setup.py  versioneer.py
python/AlgoLibR/: __init__.py
python/AlgoLibR/ai/: __init__.py
python/AlgoLibR/ai/nlp/: __init__.py
python/AlgoLibR/ai/nlp/seg/: __init__.py  cahocorasick_segment.pxd  cahocorasick_segment.pyx
python/AlgoLibR/data_structure/: __init__.py  cdata_structure.pxd  cheap.pyx  heap.pyx
python/AlgoLibR/demo/: __init__.py  adapter.pyx  cdemo.pxd
python/AlgoLibR/device/gpu/: __init__.py  cgpu.pxd  enum_gpu.pyx
python/AlgoLibR/gpu/: cgpu.pxd  enum_gpu.cpp
python/AlgoLibR/search/: __init__.py  csearch.pxd  csearch.pyx  search.pyx
python/AlgoLibR/sort/: __init__.py  csort.pxd  csort.pyx  csort_gpu.pxd  csort_gpu.pyx  sort.pyx
python/AlgoLibR/utils/: data_types.pxd  memory.pyx  string.pxd
python/cumlLib/: __init__.py
python/cumlLib/demo/: __init__.py  adapter.cpp  adapter.pyx  cdemo.pxd
python/cumlLib/gpu/: enum_gpu.pyx
python/cumlLib/mul/: __init__.py  cmul.pxd  mul.cpp  mul.pyx
python/cumlLib/sort/: sort.pyx
python/cumlRao/: _version.py
python/cumlRao/demo/: adapter.cpp
python/cumlRao/mul/: mul.cpp
python/test/: test.py  test_search.py  test_segment.py  test_sort.py
